py.install_sources(
  'faugus-banner.png',
  'faugus-notification.ogg',
  subdir: 'share' / meson.project_name(),
)

py.install_sources(
  'faugus-launcher.png',
  'faugus-battlenet.png',
  'faugus-ea.png',
  'faugus-epic-games.png',
  'faugus-ubisoft-connect.png',
  subdir: 'share' / 'icons' / 'hicolor' / '256x256' / 'apps',
)

py.install_sources(
  'faugus-add-symbolic.svg',
  'faugus-exit-symbolic.svg',
  'faugus-kill-symbolic.svg',
  'faugus-play-symbolic.svg',
  'faugus-settings-symbolic.svg',
  'faugus-stop-symbolic.svg',
  subdir: 'share' / 'icons' / 'hicolor' / 'scalable' / 'actions',
)
