py.install_sources(
  'faugus-banner.png',
  'faugus-notification.ogg',
  subdir: meson.project_name(),
)

py.install_sources(
  'faugus-launcher.png',
  'faugus-battlenet.png',
  'faugus-ea.png',
  'faugus-epic-games.png',
  'faugus-ubisoft-connect.png',
  subdir: 'icons' / 'hicolor' / '256x256' / 'apps',
)

py.install_sources(
  'faugus-add-symbolic.svg',
  'faugus-exit-symbolic.svg',
  'faugus-kill-symbolic.svg',
  'faugus-play-symbolic.svg',
  'faugus-settings-symbolic.svg',
  'faugus-stop-symbolic.svg',
  subdir: 'icons' / 'hicolor' / 'scalable' / 'actions',
)
